delivery zone update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     /* Global Styling */
     body { font-family: 'Poppins', sans-serif; background-color: #fffaf3; }
-<<<<<<< HEAD
+
     .tasty-nav {
   position: sticky;
   top: 0;
@@ -50,8 +50,7 @@
   }
 }
 
-=======
->>>>>>> 4826bc8dc73263cc253615273e53dd74160b17f0
+
 
     /* Header & Navigation */
     header {
@@ -562,19 +561,19 @@
   </section>
   <section class="delivery-zones-section py-5">
     <div class="container text-center">
-        <!-- The font-family for h2 is changed in CSS to give it a unique style like the image -->
-        <h2 class="text-center mb-5 fw-bold">Our Delivery Zones</h2>
-        <ul class="list-unstyled delivery-list mx-auto text-white">
-            <li>Subscribers Delivery Charges:</li>
-            <!-- Added the user's specific request -->
-            <li>&bull; Rasoolpura and Prakash Nagar: ₹50/day.</li>
-            <!-- Existing data points -->
-           
-            <li class="mt-4">For Manikonda, Durgam Cheruvu, Film Nagar, Jubilee Hills & Banjara Hills we use third-party delivery partners like Uber and Rapido.</li>
-        </ul>
+      <h2 class="text-center mb-5 fw-bold">Our Delivery Zones</h2>
+  
+      <ul class="list-unstyled delivery-list mx-auto text-white">
+        <li><strong>Subscriber Delivery Charges:</strong></li>
+        <li>&bull; Prakash Nagar, Rasoolpura, Khairtabad, Punjagutta, Somajiguda, Banjara Hills, Lakdikapul, Basheerbagh, Abids, Musheerabad, Kavadiguda, Ramnagar, Secunderabad, Ameerpet, Begumpet — <strong>₹60/day</strong></li>
+  
+        <li class="mt-4">
+          For other locations, we partner with trusted third-party delivery services like <strong>Rapido</strong> and <strong>Uber</strong> to ensure on-time deliveries.
+        </li>
+      </ul>
     </div>
-</section>
-
+  </section>
+  
   <div class="footer">Call us : 9392736351 | Fresh Meals, Happy Belly</div>
 
   <!-- Floating WhatsApp Buttons (uses external GIF image, added alt text) -->
