--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             <td>₹2200</td>
             <td>₹6500</td>
           </tr>
-          <tr>
+          <!-- <tr>
             <td>Yearly</td>
             <td>₹46,800</td>
             <td>₹40,800</td>
@@ -417,7 +417,7 @@
             <td>₹26,400</td>
             <td>₹26,400</td>
             <td>₹78,000</td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
     </div>
@@ -565,7 +565,7 @@
   
       <ul class="list-unstyled delivery-list mx-auto text-white">
         <li><strong>Subscriber Delivery Charges:</strong></li>
-        <li>&bull; Prakash Nagar, Rasoolpura, Khairtabad, Punjagutta, Somajiguda, Banjara Hills, Lakdikapul, Basheerbagh, Abids, Musheerabad, Kavadiguda, Ramnagar, Secunderabad, Ameerpet, Begumpet — <strong>₹60/day</strong></li>
+        <li>Prakash Nagar, Rasoolpura, Khairtabad, Punjagutta, Somajiguda, Banjara Hills, Lakdikapul, Basheerbagh, Abids, Musheerabad, Kavadiguda, Ramnagar, Secunderabad, Ameerpet, Begumpet — <strong>₹60/day</strong></li>
   
         <li class="mt-4">
           For other locations, we partner with trusted third-party delivery services like <strong>Rapido</strong> and <strong>Uber</strong> to ensure on-time deliveries.
