--- a/index.html
+++ b/index.html
@@ -574,14 +574,14 @@
     </div>
   </section>
   
-  <div class="footer">Call us : 9392736351 | Fresh Meals, Happy Belly</div>
+  <div class="footer">Call us : 9391156223 | Fresh Meals, Happy Belly</div>
 
   <!-- Floating WhatsApp Buttons (uses external GIF image, added alt text) -->
   <a class="whatsapp-btn mobile" href="https://api.whatsapp.com/send?phone=+919391156223">
-    <img src="https://aryasrikanth73.github.io/srikantharya/images/whatsapp.gif" alt="WhatsApp Chat" onerror="this.src='https://placehold.co/28x28/25d366/ffffff?text=W'"/>
+    <img src="whatsapp.gif" alt="WhatsApp Chat" onerror="this.src='https://placehold.co/28x28/25d366/ffffff?text=W'"/>
   </a>
   <a class="whatsapp-btn desktop" href="https://web.whatsapp.com/send?phone=+919391156223" target="_blank">
-    <img src="https://aryasrikanth73.github.io/srikantharya/images/whatsapp.gif" alt="WhatsApp Chat" onerror="this.src='https://placehold.co/28x28/25d366/ffffff?text=W'"/>
+    <img src="whatsapp.gif" alt="WhatsApp Chat" onerror="this.src='https://placehold.co/28x28/25d366/ffffff?text=W'"/>
   </a>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
