--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 </head>
 <body>
   <header>
-    <div class="banner-bar">Order Timings: Lunch Before 9:00 AM | Dinner Before 4:00 PM</div>
+    <div class="banner-bar">Order Timings: Lunch Before 8:00 AM | Dinner Before 4:00 PM</div>
 
     <nav class="navbar navbar-light bg-light px-3 py-2 tasty-nav">
       <div class="container-fluid d-flex flex-wrap align-items-center justify-content-between">
@@ -426,8 +426,9 @@
           display: inline-block; padding: 14px 22px; border-radius: 8px; color: #444;">
   For <strong>weekly</strong> and <strong>monthly subscriptions</strong>, we provide durable 
   <strong>steel boxes with bags</strong>. We don’t compromise on quality — instead of plastic, 
-  your meals arrive in reusable steel boxes.
+  your meals arrive in reusable steel boxes. 
 </p>
+<p><small>Note: The above prices do not include delivery charges.</small></p>
 
   </section>
   
