changed timing and added note

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
   <strong>steel boxes with bags</strong>. We don’t compromise on quality — instead of plastic, 
   your meals arrive in reusable steel boxes. 
 </p>
-<p><small>Note: The above prices do not include delivery charges.</small></p>
+<p class="text-center"><small>Note: The above prices do not include delivery charges.</small></p>
 
   </section>
   
